--- a/food/templates/layout/header.html
+++ b/food/templates/layout/header.html
@@ -1,6 +1,6 @@
 <nav class="light-blue darken-2">
     <div class="nav-wrapper container">
-        <a href="#" class="brand-logo">Logo</a>
+        <a href="/" class="brand-logo">Food doctor</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             {% if user.is_authenticated %}
                 <li><a href="{% url 'logout' %}">Logout</a></li>
