--- a/food/static/css/custom.css
+++ b/food/static/css/custom.css
@@ -1,18 +1,26 @@
-body {
+html,body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
   background: #fff;
+  height: 100%;
+  width: 100%;
 }
 
 main {
   flex: 1 0 auto;
 }
 
+#wrap {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .error {
     color:red;
 }
-
 
 
 /* Placement classes */
