--- a/food/templates/index.html
+++ b/food/templates/index.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block content %}
-<div class="container valign-wrapper" style="height: 623px;">
+<div class="container mt32">
     <!-- <center> -->
         {% if user.is_authenticated %}
-        <h1 class="valign">Welcome {{user}}!</h1>
+        <h1>Welcome {{user}}!</h1>
         {% else %}
-        <h4 class="valign">Hello! Please login in <a href="{% url 'login' %}">here</a></h4>
+        <h4>Hello! Please login in <a href="{% url 'login' %}">here</a></h4>
         {% endif %}
     <!-- </center> -->
 </div>
