Re-created registration form. Recipes can be searched from food API.

--- a/food/templates/layout/base.html
+++ b/food/templates/layout/base.html
@@ -8,6 +8,7 @@
     <title>Food doctor</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}">
 
     {% block custom_css %}
@@ -22,9 +23,9 @@
     </main>
     {% include "layout/footer.html" %}
 </div>
-{% block custom_js %}
-{% endblock %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
+{% block custom_js %}
+{% endblock %}
 </body>
 </html>
