--- a/food/templates/layout/header.html
+++ b/food/templates/layout/header.html
@@ -1,11 +1,40 @@
+<ul id="account_dropdown" class="dropdown-content">
+    <li>
+        <a href="{% url 'logout' %}">Logout</a>
+    </li>
+</ul>
+
 <nav class="light-blue darken-2">
     <div class="nav-wrapper container">
         <a href="/" class="brand-logo">Food doctor</a>
-        <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul class="right hide-on-med-and-down">
             {% if user.is_authenticated %}
-                <li><a href="{% url 'logout' %}">Logout</a></li>
+                <li>
+                    <a href="{% url 'recipes' %}">Recipes</a>
+                </li>
+                <li>
+                    <a class="dropdown-button" href="#!" data-activates="account_dropdown" data-beloworigin="true">
+                        {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
+                    </a>
+                </li>
             {% else %}
-                <li><a href="{% url 'registration' %}">Register</a></li>
+                <li><a href="{% url 'register' %}">Register</a></li>
+                <li><a href="{% url 'login' %}">Login</a></li>
+            {% endif %}
+        </ul>
+        <ul class="side-nav" id="mobile-demo" >
+            {% if user.is_authenticated %}
+                <li>
+                    <a href="{% url 'recipes' %}">Recipes</a>
+                </li>
+                <li>
+                    <a class="dropdown-button" href="#!" data-activates="account_dropdown" data-beloworigin="true">
+                        {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
+                    </a>
+                </li>
+            {% else %}
+                <li><a href="{% url 'register' %}">Register</a></li>
                 <li><a href="{% url 'login' %}">Login</a></li>
             {% endif %}
         </ul>
