--- a/food/templates/layout/base.html
+++ b/food/templates/layout/base.html
@@ -25,6 +25,7 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
+<script src="{% static 'js/base.js' %}"></script>
 {% block custom_js %}
 {% endblock %}
 </body>
