--- a/food/templates/layout/header.html
+++ b/food/templates/layout/header.html
@@ -3,8 +3,13 @@
         <a href="{% url 'logout' %}">Logout</a>
     </li>
 </ul>
+<ul id="account_dropdown_mobile" class="dropdown-content">
+    <li>
+        <a href="{% url 'logout' %}">Logout</a>
+    </li>
+</ul>
 
-<nav class="light-blue darken-2">
+<nav class="light-blue darken-2" id="main_navigation">
     <div class="nav-wrapper container">
         <a href="/" class="brand-logo">Food doctor</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -14,7 +19,7 @@
                     <a href="{% url 'recipes' %}">Recipes</a>
                 </li>
                 <li>
-                    <a class="dropdown-button" href="#!" data-activates="account_dropdown" data-beloworigin="true">
+                    <a class="dropdown-button" href="#" data-activates="account_dropdown" data-beloworigin="true">
                         {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
@@ -29,7 +34,7 @@
                     <a href="{% url 'recipes' %}">Recipes</a>
                 </li>
                 <li>
-                    <a class="dropdown-button" href="#!" data-activates="account_dropdown" data-beloworigin="true">
+                    <a class="dropdown-button" href="#!" data-activates="account_dropdown_mobile" data-beloworigin="true">
                         {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
