--- a/food/static/css/custom.css
+++ b/food/static/css/custom.css
@@ -5,10 +5,90 @@ html,body {
   background: #fff;
   height: 100%;
   width: 100%;
+  margin:0px 0px;
 }
 
 main {
   flex: 1 0 auto;
+}
+
+#main_navigation {
+  position: relative;
+  z-index: 2;
+}
+
+.center {
+  margin: 0 auto;
+}
+
+.hero-button {
+  border: solid #fff 2px;
+  background-color: transparent;
+  box-shadow: none;
+  transition: background-color 200ms ease;
+}
+
+.hero-button:hover {
+  transition: all 300ms ease;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+#hero {
+  height:100vh;
+  position: relative;
+  margin-top: -64px;
+  z-index: 1;
+  background: linear-gradient(272deg, #DE040C, #9EBCEB);
+  background-size: 400% 400%;
+  -webkit-animation: HeroArea 10s ease infinite;
+  -moz-animation: HeroArea 10s ease infinite;
+  -o-animation: HeroArea 10s ease infinite;
+  animation: HeroArea 10s ease infinite;
+}
+
+@-webkit-keyframes HeroArea {
+  0% {
+    background-position: 0% 48%;
+  }
+  50% {
+    background-position: 100% 53%;
+  }
+  100% {
+    background-position: 0% 48%;
+  }
+}
+@-moz-keyframes HeroArea {
+  0% {
+    background-position: 0% 48%;
+  }
+  50% {
+    background-position: 100% 53%;
+  }
+  100% {
+    background-position: 0% 48%;
+  }
+}
+@-o-keyframes HeroArea {
+  0% {
+    background-position: 0% 48%;
+  }
+  50% {
+    background-position: 100% 53%;
+  }
+  100% {
+    background-position: 0% 48%;
+  }
+}
+@keyframes HeroArea {
+  0% {
+    background-position: 0% 48%;
+  }
+  50% {
+    background-position: 100% 53%;
+  }
+  100% {
+    background-position: 0% 48%;
+  }
 }
 
 #wrap {
