--- a/food/templates/layout/footer.html
+++ b/food/templates/layout/footer.html
@@ -2,8 +2,9 @@
     <div class="container">
         <div class="row">
             <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+                <h5 class="white-text">Foods API</h5>
+                <p class="grey-text text-lighten-4">This site uses Spoonacular's Foods API to retrieve the content. For more information, click <a class="blue-text text-lighten-3" 
+                href="https://spoonacular.com/">here.</a></p>
             </div>
             <div class="col l4 offset-l2 s12">
                 <h5 class="white-text">Links</h5>
