--- a/food/static/css/custom.css
+++ b/food/static/css/custom.css
@@ -108,10 +108,42 @@ main {
     left: 0;
     right: 0;
 }
+
+.timer-column .valign,
+.carbs-column .valign {
+  margin: 0 auto;
+}
+
+.timer-column {
+  height: 300px;
+  font-size: 32px;
+  margin: 20px 0;
+  padding: 15px 10px;
+}
+.timer-column .material-icons {
+  font-size: 72px;
+  position: relative;
+  bottom: -10px;
+}
+.carbs-column {
+  height: 300px;
+}
+
+.c3-legend-item text {
+  font-size: 16px;
+}
+
+.tabs {
+  overflow-x: hidden;
+}
 /* Placement classes */
 .mt32 {
     margin-top: 32px !important;
 }
+.mb32 {
+  margin-bottom: 32px !important;
+}
+
 .pt16 {
     padding-top: 16px !important;
 }
