--- a/food/templates/recipes/recipe_details.html
+++ b/food/templates/recipes/recipe_details.html
@@ -13,12 +13,12 @@
       Cuisines: {% for cuisine in recipe.cuisines %}{{cuisine}}{% if not forloop.last %}, {% endif %}{% endfor %}
     </h5>
 
-    <ul class="tabs tabs-fixed-width mb32">
-      <li class="tab"><a href="#statistics">Statistics</a></li>
-      <li class="tab"><a href="#overview">Overview</a></li>
-      <li class="tab"><a href="#steps">Step-by-Step</a></li>
+    <ul class="tabs mb32">
+      <li class="tab col s4"><a href="#statistics">Statistics</a></li>
+      <li class="tab col s4"><a href="#overview">Overview</a></li>
+      <li class="tab col s3"><a href="#steps">Step-by-Step</a></li>
     </ul>
-    <div id="statistics" class="mt32">
+    <div id="statistics">
       <div class="col m6 s12 timer-column valign-wrapper">
         <div class="valign center-align">
           <i class="material-icons">av_timer</i><br/>
