--- a/food/templates/layout/header.html
+++ b/food/templates/layout/header.html
@@ -1,47 +1,47 @@
 <ul id="account_dropdown" class="dropdown-content">
-    <li>
-        <a href="{% url 'logout' %}">Logout</a>
-    </li>
+  <li>
+    <a href="{% url 'logout' %}">Logout</a>
+  </li>
 </ul>
 <ul id="account_dropdown_mobile" class="dropdown-content">
-    <li>
-        <a href="{% url 'logout' %}">Logout</a>
-    </li>
+  <li>
+    <a href="{% url 'logout' %}">Logout</a>
+  </li>
 </ul>
 
+<ul class="side-nav" id="mobile-nav">
+  {% if user.is_authenticated %}
+    <li>
+      <a href="{% url 'recipes' %}">Recipes</a>
+    </li>
+    <li>
+      <a class="dropdown-button" href="#!" data-activates="account_dropdown_mobile" data-beloworigin="true">
+        {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
+      </a>
+    </li>
+  {% else %}
+    <li><a href="{% url 'register' %}">Register</a></li>
+    <li><a href="{% url 'login' %}">Login</a></li>
+  {% endif %}
+</ul>
 <nav class="light-blue darken-2" id="main_navigation">
-    <div class="nav-wrapper container">
-        <a href="/" class="brand-logo">Food doctor</a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-        <ul class="right hide-on-med-and-down">
-            {% if user.is_authenticated %}
-                <li>
-                    <a href="{% url 'recipes' %}">Recipes</a>
-                </li>
-                <li>
-                    <a class="dropdown-button" href="#" data-activates="account_dropdown" data-beloworigin="true">
-                        {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
-                    </a>
-                </li>
-            {% else %}
-                <li><a href="{% url 'register' %}">Register</a></li>
-                <li><a href="{% url 'login' %}">Login</a></li>
-            {% endif %}
-        </ul>
-        <ul class="side-nav" id="mobile-demo" >
-            {% if user.is_authenticated %}
-                <li>
-                    <a href="{% url 'recipes' %}">Recipes</a>
-                </li>
-                <li>
-                    <a class="dropdown-button" href="#!" data-activates="account_dropdown_mobile" data-beloworigin="true">
-                        {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
-                    </a>
-                </li>
-            {% else %}
-                <li><a href="{% url 'register' %}">Register</a></li>
-                <li><a href="{% url 'login' %}">Login</a></li>
-            {% endif %}
-        </ul>
-    </div>
+  <div class="nav-wrapper container">
+    <a href="/" class="brand-logo">Food doctor</a>
+    <a href="#" data-activates="mobile-nav" class="button-collapse"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
+      {% if user.is_authenticated %}
+        <li>
+          <a href="{% url 'recipes' %}">Recipes</a>
+        </li>
+        <li>
+          <a class="dropdown-button" href="#" data-activates="account_dropdown" data-beloworigin="true">
+            {{user.first_name}}<i class="material-icons right">arrow_drop_down</i>
+          </a>
+        </li>
+      {% else %}
+        <li><a href="{% url 'register' %}">Register</a></li>
+        <li><a href="{% url 'login' %}">Login</a></li>
+      {% endif %}
+    </ul>
+  </div>
 </nav>
