--- a/food/static/css/custom.css
+++ b/food/static/css/custom.css
@@ -114,8 +114,12 @@ main {
   margin: 0 auto;
 }
 
+.tabs {
+  overflow-x: hidden;
+}
+
 .timer-column {
-  height: 300px;
+  height: 280px;
   font-size: 32px;
   margin: 20px 0;
   padding: 15px 10px;
@@ -126,17 +130,36 @@ main {
   bottom: -10px;
 }
 .carbs-column {
-  height: 300px;
+  height: 400px;
 }
 
 .c3-legend-item text {
   font-size: 16px;
 }
 
+[type="radio"].with-gap:checked + label:before {
+  border-radius: 50%;
+  border: 2px solid #0288d1;
+}
+
+[type="radio"].with-gap:checked + label:after {
+  border-radius: 50%;
+  border: 2px solid #0288d1;
+  background-color: #0288d1;
+  z-index: 0;
+  -webkit-transform: scale(.5);
+  -moz-transform: scale(.5);
+  -ms-transform: scale(.5);
+  -o-transform: scale(.5);
+  transform: scale(.5);
+}
 
 /* Placement classes */
+.mt16 {
+  margin-top: 16px !important;
+}
 .mt32 {
-    margin-top: 32px !important;
+  margin-top: 32px !important;
 }
 .mb32 {
   margin-bottom: 32px !important;
@@ -144,5 +167,8 @@ main {
 
 .pt16 {
   padding-top: 16px !important;
+}
+.pr32 {
+  padding-right: 32px !important;
 }
 /* Placement classes end */
