--- a/food/templates/recipes/recipe_details.html
+++ b/food/templates/recipes/recipe_details.html
@@ -6,12 +6,14 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt32">
+<div class="container mt32 mb32">
   <div class="row">
     <h3 class="light-blue-text text-darken-2 center-align">{{recipe.title}}</h3>
-    <h5 class="grey-text text-darken-2 center-align">
-      Cuisines: {% for cuisine in recipe.cuisines %}{{cuisine}}{% if not forloop.last %}, {% endif %}{% endfor %}
-    </h5>
+    {% if recipe.cuisines %}
+      <h5 class="grey-text text-darken-2 center-align">
+        Cuisines: {% for cuisine in recipe.cuisines %}{{cuisine}}{% if not forloop.last %}, {% endif %}{% endfor %}
+      </h5>
+    {% endif %}
 
     <ul class="tabs mb32">
       <li class="tab col s4"><a href="#statistics">Statistics</a></li>
@@ -77,6 +79,35 @@
       </ul>
     </div>
   </div>
+
+  <!-- Comments start here -->
+  <div class="divider"></div>
+  <div class="row">
+    <div class="col s12">
+      <h4 class="light-blue-text text-darken-2">Comments</h4>
+
+      <div id="comments">
+        {% for comment in comments %}
+          <div class="card-panel grey lighten-5 z-depth-1">
+            <div class="row">
+              <div class="col s12">
+                <h5 class="inline-block">{{comment.user.first_name}}</h5>
+                <h6 class="grey-text text-darken-2 inline-block right">{{comment.date}}</h6>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col s12">
+                <span class="black-text">
+                  {{comment.body}}
+                </span>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      </div>
+
+    </div>
+  </div>
 </div>
 {% endblock %}
 
@@ -106,7 +137,40 @@ $(function() {
     var value = $(this).val();
     chart.transform(value);
   });
+  update();
 });
 
+// Update comment section
+function update() {
+
+  var url = '/recipes/{{recipe.id}}/comments';
+  $.getJSON(url).done(function(data) {
+    var container = $('#comments');
+    var element = "";
+
+    $.each(data, function(index, value) {
+
+      element += `
+        <div class="card-panel grey lighten-5 z-depth-1">
+          <div class="row">
+            <div class="col s12">
+              <h5 class="inline-block">${value['first_name']}}</h5>
+              <h6 class="grey-text text-darken-2 inline-block right">{{comment.date}}</h6>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12">
+              <span class="black-text">
+                {{comment.body}}
+              </span>
+            </div>
+          </div>
+        </div>
+      `;
+    });
+    // console.log(data);
+  });
+  // setTimeout(update, 1000);
+}
 </script>
 {% endblock %}
