--- a/food/templates/recipes/recipe_details.html
+++ b/food/templates/recipes/recipe_details.html
@@ -87,23 +87,7 @@
       <h4 class="light-blue-text text-darken-2">Comments</h4>
 
       <div id="comments">
-        {% for comment in comments %}
-          <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row">
-              <div class="col s12">
-                <h5 class="inline-block">{{comment.user.first_name}}</h5>
-                <h6 class="grey-text text-darken-2 inline-block right">{{comment.date}}</h6>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col s12">
-                <span class="black-text">
-                  {{comment.body}}
-                </span>
-              </div>
-            </div>
-          </div>
-        {% endfor %}
+        {% include "recipes/comments.html" %}
       </div>
 
     </div>
@@ -144,33 +128,18 @@ $(function() {
 function update() {
 
   var url = '/recipes/{{recipe.id}}/comments';
-  $.getJSON(url).done(function(data) {
+  $.get(url).done(function(data) {
     var container = $('#comments');
-    var element = "";
-
-    $.each(data, function(index, value) {
-
-      element += `
-        <div class="card-panel grey lighten-5 z-depth-1">
-          <div class="row">
-            <div class="col s12">
-              <h5 class="inline-block">${value['first_name']}}</h5>
-              <h6 class="grey-text text-darken-2 inline-block right">{{comment.date}}</h6>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col s12">
-              <span class="black-text">
-                {{comment.body}}
-              </span>
-            </div>
-          </div>
-        </div>
-      `;
-    });
-    // console.log(data);
+    var previous_count = $(container).find('.card-panel').length;
+    var new_element = $('<div></div>').html(data).children();
+    var new_element_count = $(new_element).length;
+    if (previous_count === new_element_count) {
+      return;
+    } else {
+      container.html(new_element);
+    }
   });
-  // setTimeout(update, 1000);
+  setTimeout(update, 1000);
 }
 </script>
 {% endblock %}
