--- a/food/templates/recipes/recipe_details.html
+++ b/food/templates/recipes/recipe_details.html
@@ -92,6 +92,11 @@
 
     </div>
   </div>
+  <div class="fixed-action-btn">
+    <a class="btn-floating btn-large blue">
+      <i class="large material-icons">message</i>
+    </a>
+  </div>
 </div>
 {% endblock %}
 
@@ -100,7 +105,7 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.js"></script>
 <script type="text/javascript">
 $(function() {
-
+  $('.modal').modal();
   var chart = c3.generate({
     bindto: '#chart',
     size: {
@@ -131,7 +136,7 @@ function update() {
   $.get(url).done(function(data) {
     var container = $('#comments');
     var previous_count = $(container).find('.card-panel').length;
-    var new_element = $('<div></div>').html(data).children();
+    var new_element = $('<div></div>').html(data).find('.card-panel');
     var new_element_count = $(new_element).length;
     if (previous_count === new_element_count) {
       return;
@@ -139,7 +144,12 @@ function update() {
       container.html(new_element);
     }
   });
-  setTimeout(update, 1000);
+  setTimeout(update, 3000);
 }
+
+$('.modal-trigger').on('click', function () {
+  console.log("meni");
+  console.log($(this).data('id'));
+});
 </script>
 {% endblock %}
