--- a/food/templates/recipes/recipe_details.html
+++ b/food/templates/recipes/recipe_details.html
@@ -84,18 +84,63 @@
   <div class="divider"></div>
   <div class="row">
     <div class="col s12">
-      <h4 class="light-blue-text text-darken-2">Comments</h4>
-
-      <div id="comments">
+      <div id="comments" data-recipe-id="{{recipe.id}}">
         {% include "recipes/comments.html" %}
       </div>
 
     </div>
   </div>
+
   <div class="fixed-action-btn">
-    <a class="btn-floating btn-large blue">
+    <a id="add_comment" class="btn-floating btn-large blue modal-trigger" href="#add_comment_modal">
       <i class="large material-icons">message</i>
     </a>
+  </div>
+
+  <!-- Add a new comment -->
+  <div id="add_comment_modal" class="modal">
+    <div class="modal-content">
+      <h4>Add comment</h4>
+      <form id="add_comment_form" action="/comments/add" method="post">
+        {{form}}
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="submit" form="add_comment_form"
+      class="modal-action modal-close waves-effect waves-green btn-flat white-text light-blue">Create</button>
+      <a href="#!"
+      class="modal-action modal-close waves-effect waves-green btn-flat btn-cancel">Cancel</a>
+    </div>
+  </div>
+
+  <!-- Edit comment -->
+  <div id="edit_comment_modal" class="modal">
+    <div class="modal-content">
+      <h4>Edit comment</h4>
+      <form id="edit_comment_form" action="/comments/edit/" method="post">
+        {{form}}
+      </form>
+    </div>
+    <div class="modal-footer">
+      <button type="submit" form="edit_comment_form"
+      class="modal-action modal-close waves-effect waves-green btn-flat white-text light-blue">Confirm</button>
+      <a href="#!"
+      class="modal-action modal-close waves-effect waves-green btn-flat btn-cancel">Cancel</a>
+    </div>
+  </div>
+
+  <!-- Are you sure prompt to delete comment -->
+  <div id="delete_modal" class="modal">
+    <div class="modal-content">
+      <h4>Delete comment</h4>
+      Are you sure you want to delete the comment?
+    </div>
+    <div class="modal-footer">
+      <a href="#!" id="delete_confirm"
+      class="modal-action modal-close waves-effect waves-green btn-flat red white-text btn-delete">Delete</a>
+      <a href="#!"
+      class="modal-action modal-close waves-effect waves-green btn-flat btn-cancel">Cancel</a>
+    </div>
   </div>
 </div>
 {% endblock %}
@@ -126,30 +171,87 @@ $(function() {
     var value = $(this).val();
     chart.transform(value);
   });
-  update();
+  setInterval(update, 5000);
 });
+
+var update_allowed = true;
 
 // Update comment section
 function update() {
 
-  var url = '/recipes/{{recipe.id}}/comments';
-  $.get(url).done(function(data) {
-    var container = $('#comments');
-    var previous_count = $(container).find('.card-panel').length;
-    var new_element = $('<div></div>').html(data).find('.card-panel');
-    var new_element_count = $(new_element).length;
-    if (previous_count === new_element_count) {
-      return;
-    } else {
-      container.html(new_element);
-    }
-  });
-  setTimeout(update, 3000);
+  if (update_allowed) {
+    var url = '/recipes/{{recipe.id}}/comments';
+    $.get(url).done(function(data) {
+      var container = $('#comments');
+      var previous_count = $(container).find('.card-panel').length;
+      var new_element = $('<div></div>').html(data).find('.card-panel');
+      var new_element_count = $(new_element).length;
+      if (previous_count === new_element_count) {
+        return;
+      } else {
+        container.html(new_element);
+      }
+    });
+  }
 }
 
-$('.modal-trigger').on('click', function () {
-  console.log("meni");
-  console.log($(this).data('id'));
+function getCookie(name) {
+    var cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        var cookies = document.cookie.split(';');
+        for (var i = 0; i < cookies.length; i++) {
+            var cookie = jQuery.trim(cookies[i]);
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+
+$('.modal-trigger').on('click', function() {
+  var id = $(this).attr('id');
+  var comment_id = $(this).data('id');
+  update_allowed = false;
+  if (id == 'delete_button'){
+    $('#delete_modal').find('.btn-delete').attr('data-id', comment_id);
+  } else if (id == 'edit_button') {
+    console.log(comment_id);
+    var body = $('#body_' + comment_id).html().trim();
+    $('#edit_comment_form').find("#id_body").val(body);
+  }
+});
+
+$('.modal-close').on('click', function() {
+  update_allowed = true;
+  setTimeout(update, 200);
+});
+
+// Delete comment js functionality
+$('#delete_confirm').on('click', function() {
+  var comment_id = $(this).data('id');
+  var csrftoken = getCookie('csrftoken');
+  $.post('/comments/delete/' + comment_id, {csrfmiddlewaretoken: csrftoken});
+});
+
+
+// Send a new comment only if body is not empty
+$('#add_comment_form').on('submit', function(event) {
+  event.preventDefault();
+  var csrftoken = getCookie('csrftoken');
+  var body = $(this).find('#id_body');
+  var recipe_id = $('#comments').data('recipe-id');
+
+  if (body.val().trim()) {
+    $.post($(this).attr('action'), {
+      csrfmiddlewaretoken: csrftoken,
+      body: body.val().trim(),
+      recipe_id: recipe_id
+    });
+  }
+  body.val("");
 });
 </script>
 {% endblock %}
