--- a/food/templates/recipes/comments.html
+++ b/food/templates/recipes/comments.html
@@ -1,5 +1,5 @@
 {% for comment in comments %}
-  <div class="card-panel grey lighten-5 z-depth-1">
+  <div class="card-panel grey lighten-5 z-depth-1" id="comment_{{comment.id}}">
     <div class="row">
       <div class="col s12">
         <h5 class="inline-block">{{comment.user.first_name}}</h5>
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
       <div class="col s12">
-        <span class="black-text">
+        <span class="black-text" id="body_{{comment.id}}">
           {{comment.body}}
         </span>
       </div>
@@ -20,15 +20,17 @@
               <i class="large material-icons">clear_all</i>
             </a>
             <ul>
-              <li><a class="modal-trigger btn-floating waves-effect waves-light red right"
-                data-toggle="modal" href="#delete-comment" data-id="{{comment.id}}">
-                <i class="material-icons">delete</i>
-              </a></li>
-
-              <li><a class="modal-trigger btn-floating waves-effect waves-light blue right"
-                href="#comment-form" data-id="{{comment.id}}">
-                <i class="material-icons">mode_edit</i>
-              </a>
+              <li>
+                <a id="delete_button" data-toggle="modal" href="#delete_modal" data-id="{{comment.id}}"
+                  class="modal-trigger btn-floating waves-effect waves-light red right">
+                  <i class="material-icons">delete</i>
+                </a>
+              </li>
+              <li>
+                <a id="edit_button" href="#edit_comment_modal" data-id="{{comment.id}}"
+                    class="modal-trigger btn-floating waves-effect waves-light blue right">
+                  <i class="material-icons">mode_edit</i>
+                </a>
               </li>
             </ul>
           </div>
@@ -37,25 +39,3 @@
       {% endif %}
   </div>
 {% endfor %}
-
-<!-- Add a new comment or edit comment -->
-<div id="comment-form" class="modal modal-fixed-footer">
-  <div class="modal-content">
-    <h4>Modal Header</h4>
-    <p>A bunch of text</p>
-  </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-  </div>
-</div>
-
-<!-- Are you sure prompt to delete comment -->
-<div id="delete-comment" class="modal modal-fixed-footer">
-  <div class="modal-content">
-    <h4>Delete comment</h4>
-  </div>
-  <div class="modal-footer">
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
-    <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Disagree</a>
-  </div>
-</div>
