--- a/food/templates/recipes/recipe_details.html
+++ b/food/templates/recipes/recipe_details.html
@@ -12,6 +12,9 @@
     {% if recipe.cuisines %}
       <h5 class="grey-text text-darken-2 center-align">
         Cuisines: {% for cuisine in recipe.cuisines %}{{cuisine}}{% if not forloop.last %}, {% endif %}{% endfor %}
+        <input type="hidden" id="recipe" data-id="{{recipe.id}}" data-carbs="{{recipe.nutrition.caloricBreakdown.percentCarbs}}"
+          data-fat="{{recipe.nutrition.caloricBreakdown.percentFat}}"
+          data-protein="{{recipe.nutrition.caloricBreakdown.percentProtein}}">
       </h5>
     {% endif %}
 
@@ -108,7 +111,7 @@
     <div class="modal-footer">
       <button type="submit" form="add_comment_form"
       class="modal-action modal-close waves-effect waves-green btn-flat white-text light-blue">Create</button>
-      <a href="#!"
+      <a
       class="modal-action modal-close waves-effect waves-green btn-flat btn-cancel">Cancel</a>
     </div>
   </div>
@@ -124,7 +127,7 @@
     <div class="modal-footer">
       <button type="submit" form="edit_comment_form"
       class="modal-action modal-close waves-effect waves-green btn-flat white-text light-blue">Confirm</button>
-      <a href="#!"
+      <a
       class="modal-action modal-close waves-effect waves-green btn-flat btn-cancel">Cancel</a>
     </div>
   </div>
@@ -136,8 +139,8 @@
       Are you sure you want to delete the comment?
     </div>
     <div class="modal-footer">
-      <a href="#!" id="delete_confirm"
-      class="modal-action modal-close waves-effect waves-green btn-flat red white-text btn-delete">Delete</a>
+      <a href="#!" 
+      class="delete_confirm modal-action modal-close waves-effect waves-green btn-flat red white-text btn-delete">Delete</a>
       <a href="#!"
       class="modal-action modal-close waves-effect waves-green btn-flat btn-cancel">Cancel</a>
     </div>
@@ -148,110 +151,5 @@
 {% block custom_js %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.js"></script>
-<script type="text/javascript">
-$(function() {
-  $('.modal').modal();
-  var chart = c3.generate({
-    bindto: '#chart',
-    size: {
-        height: 300,
-        width: 300
-    },
-    data: {
-      columns: [
-        ['Carbohydrates', {{recipe.nutrition.caloricBreakdown.percentCarbs}}],
-        ['Fat', {{recipe.nutrition.caloricBreakdown.percentFat}}],
-        ['Protein', {{recipe.nutrition.caloricBreakdown.percentProtein}}]
-      ]
-    }
-  });
-  chart.transform('pie');
-
-  $('.chart-button').on('click', function() {
-    var value = $(this).val();
-    chart.transform(value);
-  });
-  setInterval(update, 5000);
-});
-
-var update_allowed = true;
-
-// Update comment section
-function update() {
-
-  if (update_allowed) {
-    var url = '/recipes/{{recipe.id}}/comments';
-    $.get(url).done(function(data) {
-      var container = $('#comments');
-      var previous_count = $(container).find('.card-panel').length;
-      var new_element = $('<div></div>').html(data).find('.card-panel');
-      var new_element_count = $(new_element).length;
-      if (previous_count === new_element_count) {
-        return;
-      } else {
-        container.html(new_element);
-      }
-    });
-  }
-}
-
-function getCookie(name) {
-    var cookieValue = null;
-    if (document.cookie && document.cookie !== '') {
-        var cookies = document.cookie.split(';');
-        for (var i = 0; i < cookies.length; i++) {
-            var cookie = jQuery.trim(cookies[i]);
-            // Does this cookie string begin with the name we want?
-            if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                break;
-            }
-        }
-    }
-    return cookieValue;
-}
-
-$('.modal-trigger').on('click', function() {
-  var id = $(this).attr('id');
-  var comment_id = $(this).data('id');
-  update_allowed = false;
-  if (id == 'delete_button'){
-    $('#delete_modal').find('.btn-delete').attr('data-id', comment_id);
-  } else if (id == 'edit_button') {
-    console.log(comment_id);
-    var body = $('#body_' + comment_id).html().trim();
-    $('#edit_comment_form').find("#id_body").val(body);
-  }
-});
-
-$('.modal-close').on('click', function() {
-  update_allowed = true;
-  setTimeout(update, 200);
-});
-
-// Delete comment js functionality
-$('#delete_confirm').on('click', function() {
-  var comment_id = $(this).data('id');
-  var csrftoken = getCookie('csrftoken');
-  $.post('/comments/delete/' + comment_id, {csrfmiddlewaretoken: csrftoken});
-});
-
-
-// Send a new comment only if body is not empty
-$('#add_comment_form').on('submit', function(event) {
-  event.preventDefault();
-  var csrftoken = getCookie('csrftoken');
-  var body = $(this).find('#id_body');
-  var recipe_id = $('#comments').data('recipe-id');
-
-  if (body.val().trim()) {
-    $.post($(this).attr('action'), {
-      csrfmiddlewaretoken: csrftoken,
-      body: body.val().trim(),
-      recipe_id: recipe_id
-    });
-  }
-  body.val("");
-});
-</script>
+<script type="text/javascript" src="{% static 'js/comments.js' %}"></script>
 {% endblock %}
