--- a/food/templates/recipes/recipe_details.html
+++ b/food/templates/recipes/recipe_details.html
@@ -30,7 +30,7 @@
           <span>{{recipe.readyInMinutes}} minutes</span>
         </div>
       </div>
-      <div class="col m6 s12 carbs-column valign-wrapper">
+      <div id="statistics_charts" class="col m6 s12 carbs-column valign-wrapper">
         <div class="valign">
           <div id="chart"></div>
           <div class="center-align mt16">
@@ -120,13 +120,13 @@
   <div id="edit_comment_modal" class="modal">
     <div class="modal-content">
       <h4>Edit comment</h4>
-      <form id="edit_comment_form" action="/comments/edit/" method="post">
+      <form id="edit_comment_form" method="post">
         {{form}}
       </form>
     </div>
     <div class="modal-footer">
       <button type="submit" form="edit_comment_form"
-      class="modal-action modal-close waves-effect waves-green btn-flat white-text light-blue">Confirm</button>
+      class="btn-edit modal-action modal-close waves-effect waves-green btn-flat white-text light-blue">Confirm</button>
       <a
       class="modal-action modal-close waves-effect waves-green btn-flat btn-cancel">Cancel</a>
     </div>
@@ -151,5 +151,5 @@
 {% block custom_js %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.js"></script>
-<script type="text/javascript" src="{% static 'js/comments.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/recipe_details.js' %}"></script>
 {% endblock %}
